--- a/pandas/Languages spoken.ipynb
+++ b/pandas/Languages spoken.ipynb
@@ -377,7 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def process_district_file(df):\n",
+    "    \n",
+    "    ret = df.copy()\n",
+    "    ret.columns = \"district\",\"language\",\"sutdents\",\"els\"\n",
+    "    ret = gs.add_district_matches(ret)\n",
+    "    \n",
+    "    return ret\n",
+    "    \n",
+    "dist_df = process_district_file(get_df(fname=\"DISTRICT - LANGUAGES SPOKEN - district, state 2014-15 x5297\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -396,6 +416,7 @@
        "      <th>els</th>\n",
        "      <th>district_code</th>\n",
        "      <th>check_dist_col</th>\n",
+       "      <th>school_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -407,6 +428,7 @@
        "      <td>&lt;=5</td>\n",
        "      <td>0010011</td>\n",
        "      <td>Andover School District</td>\n",
+       "      <td>0010011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -416,6 +438,7 @@
        "      <td>&lt;=5</td>\n",
        "      <td>0010011</td>\n",
        "      <td>Andover School District</td>\n",
+       "      <td>0010011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -425,6 +448,7 @@
        "      <td>&lt;=5</td>\n",
        "      <td>0010011</td>\n",
        "      <td>Andover School District</td>\n",
+       "      <td>0010011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -434,6 +458,7 @@
        "      <td>&lt;=5</td>\n",
        "      <td>0010011</td>\n",
        "      <td>Andover School District</td>\n",
+       "      <td>0010011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -443,6 +468,7 @@
        "      <td>&lt;=5</td>\n",
        "      <td>0010011</td>\n",
        "      <td>Andover School District</td>\n",
+       "      <td>0010011</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -456,37 +482,29 @@
        "3  Andover School District  Ukrainian      <=5  <=5       0010011   \n",
        "4  Andover School District     Bangla      <=5  <=5       0010011   \n",
        "\n",
-       "            check_dist_col  \n",
-       "0  Andover School District  \n",
-       "1  Andover School District  \n",
-       "2  Andover School District  \n",
-       "3  Andover School District  \n",
-       "4  Andover School District  "
+       "            check_dist_col school_code  \n",
+       "0  Andover School District     0010011  \n",
+       "1  Andover School District     0010011  \n",
+       "2  Andover School District     0010011  \n",
+       "3  Andover School District     0010011  \n",
+       "4  Andover School District     0010011  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def process_district_file(df):\n",
-    "    \n",
-    "    ret = df.copy()\n",
-    "    ret.columns = \"district\",\"language\",\"sutdents\",\"els\"\n",
-    "    ret = gs.add_district_matches(ret)\n",
-    "    \n",
-    "    return ret\n",
-    "    \n",
-    "dist_df = process_district_file(get_df(fname=\"DISTRICT - LANGUAGES SPOKEN - district, state 2014-15 x5297\"))\n",
-    "\n",
     "dist_df.columns = \"district\",\"language\",\"students\",\"els\",\"district_code\",\"check_dist_col\"\n",
+    "dist_df[\"school_code\"] = dist_df[\"district_code\"]\n",
+    "\n",
     "dist_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -507,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -524,7 +542,7 @@
        "Name: district, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1029,7 +1047,7 @@
        "  u'zip': u'06604-2710'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1048,6 +1066,15 @@
    "source": [
     "dist_df.to_csv(\"../clean/csv/languages_spoken_districts.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
