--- a/pandas/Bilingual-TESOL FTEs per district.ipynb
+++ b/pandas/Bilingual-TESOL FTEs per district.ipynb
@@ -14,96 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>district</th>\n",
-       "      <th>year</th>\n",
-       "      <th>educators</th>\n",
-       "      <th>district_code</th>\n",
-       "      <th>check_dist_col</th>\n",
-       "      <th>dist_code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ansonia School District</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0020011</td>\n",
-       "      <td>Ansonia School District</td>\n",
-       "      <td>0020011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>2010-11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0150011</td>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>0150011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>2015-16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0150011</td>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>0150011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>2016-17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0150011</td>\n",
-       "      <td>Bridgeport School District</td>\n",
-       "      <td>0150011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bristol School District</td>\n",
-       "      <td>2015-16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0170011</td>\n",
-       "      <td>Bristol School District</td>\n",
-       "      <td>0170011</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     district     year  educators district_code  \\\n",
-       "0     Ansonia School District  2010-11          1       0020011   \n",
-       "1  Bridgeport School District  2010-11          3       0150011   \n",
-       "2  Bridgeport School District  2015-16          1       0150011   \n",
-       "3  Bridgeport School District  2016-17          1       0150011   \n",
-       "4     Bristol School District  2015-16          2       0170011   \n",
-       "\n",
-       "               check_dist_col dist_code  \n",
-       "0     Ansonia School District   0020011  \n",
-       "1  Bridgeport School District   0150011  \n",
-       "2  Bridgeport School District   0150011  \n",
-       "3  Bridgeport School District   0150011  \n",
-       "4     Bristol School District   0170011  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "global name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b508810dfd93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mget_sheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-b508810dfd93>\u001b[0m in \u001b[0;36mget_sheet\u001b[0;34m(sheetname)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_sheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msheetname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../raw/TESOL Bilingual Waivers educator counts.xlsx\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msheetname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msheetname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mret\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"district\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"year\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"educators\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
